k8s/dev/human-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: human-api-deployment
  labels:
    app: human-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: human-api
  template:
    metadata:
      labels:
        app: human-api
    spec:
      containers:
        - name: human-api
          image: gcr.io/the-human-factor/human-api:latest
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: credentials
              mountPath: "/credentials"
              readOnly: true
      volumes:
        - name: credentials
          secret:
            secretName: google-credentials
            items:
              - key: google-credentials.json
                path: google-credentials.json
---
apiVersion: v1
kind: Service
metadata:
  name: human-api-service
spec:
  type: NodePort
  selector:
    app: human-api
  ports:
    - port: 443
      targetPort: 9000
      protocol: TCP
