k8s/dev/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: development-ingress
  namespace: development
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
    - hosts:
        - dev.api.thehumanfactor.ai
      secretName: human-api-cert-dev
  rules:
  - host: dev.api.thehumanfactor.ai
    http:
      paths:
        - path: /api
          backend:
            serviceName: human-api-service
            servicePort: 9000
